--- a/Style/filmInfo.scss
+++ b/Style/filmInfo.scss
@@ -31,6 +31,9 @@
 .film-block__img {
   display: flex;
   & img {
+		border-radius: 5px;
+		box-shadow: 0px 4px 8px black; /*макет*/
+
     margin-right: 10px;
   }
 }
