--- a/Style/mainPage.scss
+++ b/Style/mainPage.scss
@@ -51,7 +51,8 @@
 .film-item-link {
 	position: relative;
   &:hover {
-    transform: scale(1.05);
+		box-shadow: 0px 4px 8px $lightColor; /*макет*/
+		border-radius: 5px;
   }
 	&:hover .by-hover {
 		opacity: 1;
@@ -79,12 +80,10 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: auto;
-  padding: 15px 5px;
+  padding: 5px 5px;
   opacity: 0;
-  transform: translateY(20px);
-  transition: transform 0.3s linear;
 	background-color: $lightColor;
+	transition: opacity 0.75s;
 }
 /*______________________Пагинация____________________________*/
 .pagination {
