--- a/Style/filmInfo.css
+++ b/Style/filmInfo.css
@@ -153,7 +153,7 @@ body.admin .film-title {
 }
 .button-login:hover,
 .button-logout:hover {
-  transform: scale(1.05);
+  transform: scale(1.1);
 }
 
 .button-login {
@@ -169,7 +169,7 @@ body.admin .film-title {
 .button-add-film:hover,
 .button-remove-film:hover,
 .button-edit-film:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .button-add-film {
@@ -199,6 +199,30 @@ body.admin .film-title {
 }
 .select:hover {
   transform: scale(1.05);
+}
+
+.not-found__container {
+  max-width: 525px;
+  padding: 20px;
+  box-shadow: 0px 0px 22px white;
+  border-radius: 5px;
+  background: white;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.not-found__container .not-found__title {
+  margin-bottom: 16px;
+}
+.not-found__container hr {
+  margin-bottom: 16px;
+}
+
+.not-found__title {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 24px;
+  color: #2d333b;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
