--- a/Style/forms.scss
+++ b/Style/forms.scss
@@ -33,7 +33,8 @@
 }
 
 input,
-textarea {
+textarea,
+select {
 	width: 100%;
 	border: 1px solid #D6D6D6;
 	border-radius: 2px;
@@ -42,7 +43,7 @@ textarea {
 	line-height: 140%;
 	padding: 9px 17px 9px 16px;
 	color: $lightColor;
-	&:placeholder {
+	&::placeholder {
 	color: #6B6B6B;
 	}
 	&:hover { 
