--- a/Style/globalStyle.scss
+++ b/Style/globalStyle.scss
@@ -119,7 +119,7 @@ body {
   color: $lightColor;
   border: 2px solid $lightColor;
 	&:hover { 
-    transform: scale(1.05);
+    transform: scale(1.1);
 	}
 }
 .button-login {
@@ -131,7 +131,7 @@ body {
   display: none;
 	width: 35px;
 	&:hover {
-		transform: scale(1.1);
+		transform: scale(1.05);
 	}
 }
 .button-add-film {
@@ -159,6 +159,32 @@ body {
     transform: scale(1.05);
 	}
 }
+
+.not-found__container { 
+	max-width: 525px; 
+	padding: 20px;
+	box-shadow: 0px 0px 22px white;
+	border-radius: 5px;
+	background: white;
+	margin: 0 auto; 
+	margin-top: 50px;
+	& .not-found__title { 
+		margin-bottom: 16px;
+	}
+	& hr { 
+		margin-bottom: 16px;
+	}
+}
+.not-found__title { 
+	font-weight: 600;
+	font-size: 28px;
+	line-height: 24px;
+	color: $darkColor;
+	text-align: center;
+}
+
+
+
 @media screen and (max-width: 768px){
 	.header, .main {
 		max-width: 100%;
