--- a/Style/globalStyle.scss
+++ b/Style/globalStyle.scss
@@ -29,6 +29,33 @@ a {
   justify-content: center;
   align-items: center;
 }
+/*для лоудера*/
+#loading {
+	width: 2rem;
+	height: 2rem;
+	position: fixed;
+	top: 50%;
+	right: 50%;
+	border: 5px solid #f3f3f3;
+	border-top: 6px solid $yellowColor;
+	border-radius: 100%;
+	margin: auto;
+	visibility: hidden;
+	animation: spin 1s infinite linear;
+}
+#loading.display {
+	visibility: visible;
+	z-index: 999;
+}
+@keyframes spin {
+	from {
+			transform: rotate(0deg);
+	}
+	to {
+			transform: rotate(360deg);
+	}
+}
+
 body {
 	font-family: 'Roboto', Arial, sans-serif;
 	font-size: 16px;
@@ -42,9 +69,6 @@ body {
 	& header {
 		margin-bottom: 15px;
 	}
-
-}
-body {
 	&.autorized {
 		& .header-user-info-wrapper {
 			display: block;
@@ -130,6 +154,7 @@ body {
 .button-edit-film {
   display: none;
 	width: 35px;
+	height: 35px;
 	&:hover {
 		transform: scale(1.05);
 	}
