--- a/Style/filmInfo.css
+++ b/Style/filmInfo.css
@@ -282,17 +282,18 @@ body.admin .film-title {
 .film-block .film-block__title {
   margin-bottom: 30px;
 }
-.film-block p {
-  font-weight: 500;
-  margin-bottom: 15px;
-}
-.film-block p span {
+.film-block span {
+  display: inline-block;
   font-size: 19px;
   font-weight: 500;
+  margin-bottom: 10px;
   color: rgba(188, 156, 248, 0.747);
 }
-.film-block p span.vote-count {
+.film-block span.vote-count {
   color: red;
+}
+.film-block .button-wrapper {
+  margin-bottom: 20px;
 }
 
 .film-block__img {
@@ -314,12 +315,102 @@ body.admin .film-title {
   width: 60%;
 }
 
-.film-block__title {
+.edit-film__input {
+  display: inline-block;
+  width: 50%;
+  border: 0px;
+  background: white;
+}
+.edit-film__input.film-block__title {
+  width: 100%;
   font-size: 28px;
   line-height: 28px;
+}
+.edit-film__input.film-block__title[value] {
   color: rgba(188, 156, 248, 0.747);
 }
+.edit-film__input[value] {
+  color: #adbac7;
+}
+.edit-film__input:disabled {
+  background: #2d333b;
+}
 
+textarea.edit-film__input {
+  width: 100%;
+  height: 170px;
+  color: #adbac7;
+  overflow: hidden;
+}
+
+.button-wrapper .button:first-child {
+  margin-right: 10px;
+}
+
+.button-wrapper {
+  /*+++*/
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.button-primary {
+  width: 180px;
+  background-color: #FBC832;
+  cursor: pointer;
+  background-position: 50% 50%;
+  /*в центрe начинаем анимацию*/
+}
+.button-primary:hover {
+  color: #000000;
+  box-shadow: 0px 2px 4px #2d333b;
+  animation-name: button-primary-hover;
+  /*имя анимации*/
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  /*количество повторов ключевых кадров (1 по умолчанию, просто чтобы не забыть)*/
+  animation-fill-mode: forwards;
+  background-image: radial-gradient(circle, #FFDF86 10%, transparent 10%);
+  /*создала радиальный градиент с формой "круг" и прозрачностью в 10%*/
+}
+.button-primary:active {
+  /*pressed на макете*/
+  color: #000000;
+  background-image: radial-gradient(circle, #FFBB0C 10%, transparent 10%);
+  animation-name: button-primary-active;
+  /*имя анимации*/
+}
+.button-primary:disabled {
+  /*disabled на макете*/
+  display: none;
+}
+.button-primary:focus-visible {
+  border: 3px solid #6B6B6B;
+  color: #242424;
+}
+.button-primary:active {
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  /*количество повторов ключевых кадров (1 по умолчанию, просто чтобы не забыть)*/
+  animation-fill-mode: forwards;
+}
+
+@keyframes button-primary-hover {
+  from {
+    background-size: 0% 0%;
+  }
+  to {
+    background-size: 1000% 1000%;
+  }
+}
+@keyframes button-primary-active {
+  from {
+    background-size: 0% 0%;
+  }
+  to {
+    background-size: 1000% 1000%;
+  }
+}
 @media screen and (max-width: 768px) {
   .film-block .film-block__title {
     margin-bottom: 20px;
