--- a/Style/filmInfo.scss
+++ b/Style/filmInfo.scss
@@ -15,19 +15,22 @@
   & .film-block__title {
     margin-bottom: 30px;
   }
-  & p {
+  & span {
+    display: inline-block;
+    font-size: 19px;
     font-weight: 500;
-    margin-bottom: 15px;
-    & span {
-      font-size: 19px;
-      font-weight: 500;
-      color: rgba(188, 156, 248, 0.747);
-			&.vote-count {
-				color: red;
-			}
+    margin-bottom: 10px;
+    color: rgba(188, 156, 248, 0.747);
+    &.vote-count {
+      color: red;
     }
   }
+  
+  & .button-wrapper {
+		margin-bottom: 20px;
+	}
 }
+
 .film-block__img {
   display: flex;
   & .film-img {
@@ -43,11 +46,92 @@
 .film-block__text {
   width: 60%;
 }
-.film-block__title {
-  font-size: 28px;
+
+.edit-film__input {
+  display: inline-block;
+  width: 50%;
+  border: 0px;
+  background: white;
+  &.film-block__title {
+  width: 100%;
+    font-size: 28px;
   line-height: 28px;
-  color: rgba(188, 156, 248, 0.747);
+  &[value] {
+    color: rgba(188, 156, 248, 0.747);
+  }
+  }
+  &[value] {
+    color: $lightColor;
+  }
+  &:disabled {
+    background: $darkColor;
+  }
 }
+textarea.edit-film__input {
+  width: 100%;
+  height: 170px;   
+  color: $lightColor;
+  overflow: hidden;
+}
+.button-wrapper { 
+	& .button:first-child {
+		margin-right: 10px;
+	}
+}
+.button-wrapper { /*+++*/
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+}
+.button-primary { 
+	width: 180px;
+	background-color: $yellowColor; 
+	cursor: pointer;
+	background-position: 50% 50%; /*в центрe начинаем анимацию*/
+	&:hover {
+		color: #000000;
+		box-shadow: 0px 2px 4px $darkColor;
+		animation-name: button-primary-hover; /*имя анимации*/
+		animation-duration: 0.5s;
+		animation-iteration-count: 1; /*количество повторов ключевых кадров (1 по умолчанию, просто чтобы не забыть)*/
+		animation-fill-mode:forwards; 
+		background-image: radial-gradient(circle,#FFDF86 10%,transparent 10%); /*создала радиальный градиент с формой "круг" и прозрачностью в 10%*/
+	}
+	&:active { /*pressed на макете*/
+		color: #000000;
+		background-image: radial-gradient(circle,#FFBB0C 10%,transparent 10%); 
+		animation-name: button-primary-active; /*имя анимации*/
+	}
+	&:disabled { /*disabled на макете*/
+	display: none;
+	}
+	&:focus-visible {
+		border: 3px solid #6B6B6B;
+		color: #242424;
+	}
+	&:active {
+		animation-duration: 0.5s;
+		animation-iteration-count: 1; /*количество повторов ключевых кадров (1 по умолчанию, просто чтобы не забыть)*/
+		animation-fill-mode:forwards; 
+	}
+}
+@keyframes button-primary-hover {
+	from {
+		background-size: 0% 0%;
+	}
+	to {
+		background-size: 1000% 1000%;
+	}
+}
+@keyframes button-primary-active {
+	from {
+		background-size: 0% 0%;
+	}
+	to {
+		background-size: 1000% 1000%;
+	}
+	}
+
 @media screen and (max-width: 768px) {
   .film-block {
     & .film-block__title {
